objects/ssot__BenefitDisbursementAdjustment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentReason__c</fullName>
        <label>Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentAdjustmentId__c</fullName>
        <label>Benefit Assignment Adjustment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitDisbursementId__c</fullName>
        <label>Benefit Disbursement</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Disbursement Adjustment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291819967_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitDisbursementAdjustment_Benefi_rel</label>
        <referenceTo>ssot__BenefitAssignmentAdjustment__dlm</referenceTo>
        <relationshipLabel>BenefitDisbursementAdjustment_Benefi_rel</relationshipLabel>
        <relationshipName>rel_1720291819967_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>